--- a/app/src/main/res/layout/fragment_exchange.xml
+++ b/app/src/main/res/layout/fragment_exchange.xml
@@ -21,6 +21,7 @@
                 android:id="@+id/rv_exchanges"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:itemCount="20"
                 tools:listitem="@layout/item_exchange" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
