--- a/app/src/main/res/layout/item_trade.xml
+++ b/app/src/main/res/layout/item_trade.xml
@@ -34,11 +34,10 @@
                 android:id="@+id/tv_exchange"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
+                android:layout_weight="8"
                 android:ellipsize="end"
                 android:gravity="center|start"
-                android:maxLines="1"
-                android:paddingStart="@dimen/default_padding"
+                android:maxLines="2"
                 android:paddingEnd="@dimen/default_padding"
                 android:scrollHorizontally="false"
                 android:text="@{exchange}"
@@ -47,14 +46,14 @@
                 app:autoSizeMinTextSize="10sp"
                 app:autoSizeTextType="uniform"
                 app:lineHeight="14sp"
-                tools:text="Binance"
+                tools:text="Binance Binance"
                 tools:visibility="visible" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="6"
                 android:ellipsize="end"
                 android:gravity="center|start"
                 android:maxLines="2"
@@ -74,6 +73,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:maxEms="8"
+                android:minEms="4"
                 android:text='@{currency + price}'
                 android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                 app:autoSizeMinTextSize="10sp"
@@ -81,7 +81,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/tv_change"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:text="$123,456,789.40" />
+                tools:text="$123,456.40" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_vol"
