--- a/app/src/main/res/layout/shimmer_coin_details_price.xml
+++ b/app/src/main/res/layout/shimmer_coin_details_price.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical" >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -12,69 +13,16 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/android:colorBackground"
+            android:paddingTop="@dimen/default_padding_small"
             android:paddingBottom="@dimen/default_padding">
-
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/shim_top"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingRight="@dimen/default_padding_tiny"
-                app:navigationIcon="@drawable/arrow_back" />
-
-            <CheckBox
-                style="@style/CF_Bookmark"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignBottom="@id/shim_top"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="@dimen/default_padding_small"
-                android:button="@drawable/sl_bookmark" />
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/shim_img"
-                style="@style/CF_Shimmer_Container"
-                android:layout_width="48dp"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/shim_top"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="58dp"
-                android:layout_marginTop="@dimen/default_padding_small"
-                android:layout_marginEnd="@dimen/default_padding_small"
-                android:layout_marginBottom="@dimen/default_padding_small" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/shim_top"
-                android:layout_alignParentTop="true"
-                android:layout_toRightOf="@id/shim_img"
-                android:gravity="center_vertical"
-                android:orientation="vertical"
-                android:paddingStart="@dimen/default_padding_small">
-
-                <androidx.cardview.widget.CardView
-                    style="@style/CF_Shimmer_Container"
-                    android:layout_width="100dp"
-                    android:layout_height="22dp"
-                    android:layout_marginBottom="@dimen/default_padding_small" />
-
-                <androidx.cardview.widget.CardView
-                    style="@style/CF_Shimmer_Container"
-                    android:layout_width="48dp"
-                    android:layout_height="14dp" />
-
-            </LinearLayout>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/shim_price"
                 style="@style/CF_Shimmer_Container"
                 android:layout_width="256dp"
                 android:layout_height="26dp"
-                android:layout_below="@id/shim_top"
-                android:layout_alignStart="@id/shim_top"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
                 android:layout_marginStart="@dimen/default_padding"
                 android:layout_marginTop="@dimen/default_padding" />
 
@@ -82,7 +30,6 @@
                 style="@style/CF_Shimmer_Container"
                 android:layout_width="48dp"
                 android:layout_height="18dp"
-                android:layout_below="@id/shim_top"
                 android:layout_alignTop="@id/shim_price"
                 android:layout_marginStart="@dimen/default_padding_small"
                 android:layout_toEndOf="@id/shim_price" />
@@ -130,39 +77,45 @@
                         android:layout_width="82dp"
                         android:layout_height="wrap_content"
                         android:clickable="false"
-                        app:chipBackgroundColor="?attr/colorSecondary" />
+                        app:chipBackgroundColor="?attr/colorSecondary"
+                        tools:ignore="SpeakableTextPresentCheck" />
 
                     <com.google.android.material.chip.Chip
                         android:layout_width="64dp"
                         android:layout_height="wrap_content"
                         android:clickable="false"
-                        app:chipBackgroundColor="?attr/colorSecondary" />
+                        app:chipBackgroundColor="?attr/colorSecondary"
+                        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
                     <com.google.android.material.chip.Chip
                         android:layout_width="64dp"
                         android:layout_height="wrap_content"
                         android:clickable="false"
-                        app:chipBackgroundColor="?attr/colorSecondary" />
+                        app:chipBackgroundColor="?attr/colorSecondary"
+                        tools:ignore="SpeakableTextPresentCheck" />
 
                     <com.google.android.material.chip.Chip
                         android:layout_width="64dp"
                         android:layout_height="wrap_content"
                         android:clickable="false"
-                        app:chipBackgroundColor="?attr/colorSecondary" />
-
-
-                    <com.google.android.material.chip.Chip
-                        android:layout_width="64dp"
-                        android:layout_height="wrap_content"
-                        android:clickable="false"
-                        app:chipBackgroundColor="?attr/colorSecondary" />
+                        app:chipBackgroundColor="?attr/colorSecondary"
+                        tools:ignore="SpeakableTextPresentCheck" />
 
 
                     <com.google.android.material.chip.Chip
                         android:layout_width="64dp"
                         android:layout_height="wrap_content"
                         android:clickable="false"
-                        app:chipBackgroundColor="?attr/colorSecondary" />
+                        app:chipBackgroundColor="?attr/colorSecondary"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+
+                    <com.google.android.material.chip.Chip
+                        android:layout_width="64dp"
+                        android:layout_height="wrap_content"
+                        android:clickable="false"
+                        app:chipBackgroundColor="?attr/colorSecondary"
+                        tools:ignore="SpeakableTextPresentCheck" />
 
                     <com.google.android.material.chip.Chip
                         android:layout_width="64dp"
@@ -187,7 +140,8 @@
             android:text="@string/statistics"
             android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
             android:textColor="?attr/colorOnBackground"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:ignore="TextContrastCheck,TextContrastCheck" />
 
         <View
             android:layout_width="match_parent"
@@ -217,14 +171,15 @@
                         android:elegantTextHeight="true"
                         android:text="@string/tv_market_cap"
                         android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-                        android:textColor="?attr/colorOnSurfaceVariant" />
+                        android:textColor="?attr/colorOnSurfaceVariant"
+                        tools:ignore="TextContrastCheck" />
 
                     <androidx.cardview.widget.CardView
                         style="@style/CF_Shimmer_Container"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:layout_marginTop="@dimen/default_padding_small"
-                        android:layout_marginBottom="@dimen/default_padding_small" />
+                        android:layout_marginBottom="@dimen/default_padding" />
 
                 </LinearLayout>
 
@@ -246,14 +201,15 @@
                         android:elegantTextHeight="true"
                         android:text="@string/tv_volume_24h"
                         android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-                        android:textColor="?attr/colorOnSurfaceVariant" />
+                        android:textColor="?attr/colorOnSurfaceVariant"
+                        tools:ignore="TextContrastCheck" />
 
                     <androidx.cardview.widget.CardView
                         style="@style/CF_Shimmer_Container"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:layout_marginTop="@dimen/default_padding_small"
-                        android:layout_marginBottom="@dimen/default_padding_small" />
+                        android:layout_marginBottom="@dimen/default_padding" />
 
                 </LinearLayout>
 
@@ -282,14 +238,15 @@
                         android:elegantTextHeight="true"
                         android:text="@string/tv_supply"
                         android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-                        android:textColor="?attr/colorOnSurfaceVariant" />
+                        android:textColor="?attr/colorOnSurfaceVariant"
+                        tools:ignore="TextContrastCheck" />
 
                     <androidx.cardview.widget.CardView
                         style="@style/CF_Shimmer_Container"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:layout_marginTop="@dimen/default_padding_small"
-                        android:layout_marginBottom="@dimen/default_padding_small" />
+                        android:layout_marginBottom="@dimen/default_padding" />
 
                 </LinearLayout>
 
@@ -329,14 +286,15 @@
                         android:elegantTextHeight="true"
                         android:text="@string/tv_24h_high"
                         android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-                        android:textColor="?attr/colorOnSurfaceVariant" />
+                        android:textColor="?attr/colorOnSurfaceVariant"
+                        tools:ignore="TextContrastCheck" />
 
                     <androidx.cardview.widget.CardView
                         style="@style/CF_Shimmer_Container"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:layout_marginTop="@dimen/default_padding_small"
-                        android:layout_marginBottom="@dimen/default_padding_small" />
+                        android:layout_marginBottom="@dimen/default_padding" />
 
                 </LinearLayout>
 
@@ -358,14 +316,15 @@
                         android:elegantTextHeight="true"
                         android:text="@string/tv_24h_low"
                         android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
-                        android:textColor="?attr/colorOnSurfaceVariant" />
+                        android:textColor="?attr/colorOnSurfaceVariant"
+                        tools:ignore="TextContrastCheck" />
 
                     <androidx.cardview.widget.CardView
                         style="@style/CF_Shimmer_Container"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:layout_marginTop="@dimen/default_padding_small"
-                        android:layout_marginBottom="@dimen/default_padding_small" />
+                        android:layout_marginBottom="@dimen/default_padding" />
 
                 </LinearLayout>
 
