--- a/app/src/main/res/layout/fragment_exchange.xml
+++ b/app/src/main/res/layout/fragment_exchange.xml
@@ -3,19 +3,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
-        <variable name="error_exchange_text" type="String"/>
+        <variable name="error_text" type="String"/>
     </data>
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <include
+            android:id="@+id/shimmer_exchanges"
+            layout="@layout/shimmer_exchanges_menu"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="64dp"
+            android:visibility="visible"
+            tools:visibility="gone" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/srl_exchanges"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
+            android:visibility="gone"
             app:layout_behavior="@string/searchbar_scrolling_view_behavior"
-            tools:ignore="PrivateResource">
+            tools:ignore="PrivateResource"
+            tools:visibility="visible">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_exchanges"
@@ -27,14 +38,25 @@
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <ImageView
+            android:id="@+id/icon_error_wifi_exchange"
+            android:layout_width="@dimen/error_icon_width"
+            android:layout_height="@dimen/error_icon_height"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:importantForAccessibility="no"
+            android:visibility="gone"
+            app:srcCompat="@drawable/wifi_off"
+            tools:visibility="invisible" />
+
+        <ImageView
             android:id="@+id/icon_error_exchange"
             android:layout_width="@dimen/error_icon_width"
             android:layout_height="@dimen/error_icon_height"
             android:layout_centerInParent="true"
             android:layout_gravity="center"
             android:importantForAccessibility="no"
-            android:src="@drawable/error"
             android:visibility="gone"
+            app:srcCompat="@drawable/error"
             tools:visibility="invisible" />
 
         <com.google.android.material.textview.MaterialTextView
@@ -46,7 +68,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/error_icon_height"
             android:gravity="center"
-            android:text="@{error_exchange_text}"
+            android:text="@{error_text}"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
             android:visibility="gone"
