--- a/app/src/main/res/layout/fragment_exchange_details.xml
+++ b/app/src/main/res/layout/fragment_exchange_details.xml
@@ -5,6 +5,7 @@
     <data>
         <variable name="pairs" type="String" />
         <variable name="volume" type="String" />
+        <variable name="updated" type="String" />
 
         <variable name="currency" type="String" />
 
@@ -97,63 +98,36 @@
                 android:paddingStart="@dimen/default_padding"
                 android:paddingTop="@dimen/default_padding"
                 android:paddingEnd="@dimen/default_padding"
-                android:paddingBottom="@dimen/default_padding_small"
+                android:paddingBottom="@dimen/default_padding"
                 app:layout_scrollFlags="scroll|snap">
 
-                <LinearLayout
-                    android:id="@+id/container_volume"
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_exchange_volume"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:orientation="vertical"
-                    android:paddingBottom="@dimen/default_padding_small">
+                    android:text="@string/exchange_volume"
+                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
 
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/tv_exchange_volume"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/exchange_volume"
-                        android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/tv_exchange_volume_val"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@{currency + volume}"
-                        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
-                        android:textColor="?attr/colorOnBackground"
-                        android:textStyle="bold"
-                        tools:text="$123,456,789,123" />
-                </LinearLayout>
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip_exchange_sort"
-                    style="@style/Widget.Material3.Chip.Input.Icon.Elevated"
-                    android:layout_width="wrap_content"
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_exchange_volume_val"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/container_volume"
-                    android:layout_marginBottom="@dimen/default_padding_tiny"
-                    android:checkable="false"
-                    android:checked="false"
-                    android:text="@string/sort_by"
-                    app:closeIcon="@drawable/sort"
-                    tools:text="Sort by" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip_exchange_sort_delete"
-                    style="@style/Widget.Material3.Chip.Input.Icon.Elevated"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/container_volume"
-                    android:layout_marginStart="@dimen/default_padding_small"
-                    android:layout_toEndOf="@id/chip_exchange_sort"
-                    android:checkable="false"
-                    android:visibility="gone"
-                    app:checkedIconEnabled="false"
-                    app:textEndPadding="0dp"
-                    app:textStartPadding="4dp"
-                    tools:visibility="visible" />
+                    android:layout_below="@id/tv_exchange_volume"
+                    android:text="@{currency + volume}"
+                    android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
+                    android:textColor="?attr/colorOnBackground"
+                    android:textStyle="bold"
+                    tools:text="$123,456,789,123" />
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@id/tv_exchange_volume_val"
+                    android:layout_alignStart="@id/tv_exchange_volume_val"
+                    android:maxLines="1"
+                    android:text='@{updated}'
+                    android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
+                    android:textColor="?attr/colorOnSurfaceVariant"
+                    tools:text="23:45, 1 Jan 1971" />
 
             </RelativeLayout>
 
